syntax = "proto3";

package chatbot;

message ChatMessage {
  string user_id = 1;
  string content = 2;
  int64 timestamp = 3;
  MessageType type = 4;

  enum MessageType {
    TEXT = 0;
    IMAGE = 1;
    AUDIO = 2;
  }
}

message ChatResponse {
  string message_id = 1;
  string content = 2;
  int64 timestamp = 3;
}
